<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editMaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/maker"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/makerLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/makerLabel" />

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/makerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:text="@string/maker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/modelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/model"
            app:layout_constraintStart_toStartOf="@+id/makerLabel"
            app:layout_constraintTop_toBottomOf="@+id/makerLabel" />

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@+id/modelLabel"
            app:layout_constraintTop_toBottomOf="@+id/modelLabel" />

        <TextView
            android:id="@+id/colorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/color"
            app:layout_constraintStart_toStartOf="@+id/yearLabel"
            app:layout_constraintTop_toBottomOf="@+id/yearLabel" />

        <TextView
            android:id="@+id/seatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/seats"
            app:layout_constraintStart_toStartOf="@+id/colorLabel"
            app:layout_constraintTop_toBottomOf="@+id/colorLabel" />

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@+id/seatLabel"
            app:layout_constraintTop_toBottomOf="@+id/seatLabel" />

        <EditText
            android:id="@+id/editModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/model"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/modelLabel"
            app:layout_constraintStart_toStartOf="@+id/editMaker" />

        <EditText
            android:id="@+id/editYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/year"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/yearLabel"
            app:layout_constraintStart_toStartOf="@+id/editModel" />

        <EditText
            android:id="@+id/editColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/color"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/colorLabel"
            app:layout_constraintStart_toStartOf="@+id/editYear" />

        <EditText
            android:id="@+id/editSeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/seats"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/seatLabel"
            app:layout_constraintStart_toStartOf="@+id/editColor" />

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/priceLabel"
            app:layout_constraintStart_toStartOf="@+id/editSeat" />

        <Button
            android:id="@+id/btnAddNewCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_new_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAddress" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="408dp"
            android:layout_height="182dp"
            android:contentDescription="@string/a_car_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddNewCar"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@mipmap/colored_car_foreground" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/addressLabel"
            app:layout_constraintStart_toStartOf="@+id/editPrice" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="@+id/priceLabel"
            app:layout_constraintTop_toBottomOf="@+id/priceLabel" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_all"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnAddNewCar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toEndOf="@+id/btnAddNewCar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</android.widget.ScrollView>